# mklists_old

./: .gitignore  .pre-commit-config.yaml  .projections.json  .pylintrc  .vimrc  404.html  CNAME  CODE_OF_CONDUCT.md  Cleveland.txt  LICENSE  Next_steps.txt  README.md  README.rst  Session.vim  addme.txt  data.yml  defdir.txt  deploy.sh  dev-requirements.txt  doctests.sh  fixture  foobar  get_globlines.py  index.html  line  mkdocs.yml  mklists.py  mklists.yaml  mklists.yml  mksnaps  new_shuffle.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_20180809.txt  rules.py  rules.rst  search.html  setup.cfg  (+6 more)
doc/: conf.py  index.rst
docs/: addme2.txt  all_functions  conf.py  constants.txt  history.md  index.md  index.rst  naming.md  naming.txt  pseudo.md  wishlist.md
history/: index.html
ideas/: example_rules.csv  example_rules_with_spaces.csv
mklists/: .config  .mklistsrc  .rulesy  .rulesy2  .rulesy_bad  .vimrc  Common.py  __init__.py  _datafiles_from_datadict  _mkl.py  _mklists.py  _rules  _rules2  _rules_correct  alt_cli.py  apply.py  asdf  backups.py  booleans.py  bucket.txt  cli.py  cli_init.py  cli_orig.bak  cli_run.py  config.py  constants.py  data.py  datadir.py  datalines.py  debug.py  decorators.py  defdir.txt  exceptions.py  files2dirs.py  fileutils.py  get.py  get_datafiles.py  get_globlines.py  getrules.py  goto.py  (+38 more)
notes/: Rule.ipynb  lrule_to_srule.py  register_source_explanation.txt  rules.csv  rules_correct.csv  rules_correct2.csv
postponed/: 2018-08-19.rule_objects_are_valid.py  docstrings  linkify_constant.py  test_linkify.py  (+2 more)
(+351 files in other folders)
